<resources>
    <string name="app_name">Mobile Care</string>

    <!-- ************* Welcome Page ************* -->
    <string name="welcomeTitle">Welcome!</string>
    <string name="welcomeDescription">The Mobile Application designed for carers on the move</string>
    <string name="logoDesc">Welcome page logo</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>

    <!-- ************* Log In Page************* -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logInTitle">Log in to Mobile Care!</string>
    <string name="forgottenSignUp">Forgotten to register? Click here!</string>
    <string name="resetPassword">Reset Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="login_success">You have logged in!</string>

    <!-- ************* Password Reset ************* -->
    <string name="resetPasswordTitle">Forgotten your password?</string>
    <string name="resetPasswordCaption">We need your registered email address to send you password reset instructions.</string>
    <string name="back">Back</string>

    <!-- ************* Sign Up Page ************* -->
    <string name="signUpTitle">Sign up for Mobile Care!</string>
    <string name="confirmEmail">Confirm Email</string>
    <string name="confirmPassword">Confirm Password</string>

    <!-- ************* Carer Home Page ************* -->
    <string name="carerHomeTitle">Welcome to your care home page!</string>
    <string name="addPatient">Add someone to your care</string>
    <string name="signOut">Sign Out</string>

    <!-- ************* Add Patient Page ************* -->
    <string name="addPatientTitle">Add someone to your care</string>
    <string name="add">Add</string>
    <string name="personName">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="savePatient">Save</string>

    <!-- ************* Patient Profile ************* -->
    <string name="thisIsMe">This is me</string>
    <string name="medication">Medication</string>
    <string name="myFamily">My Family</string>
    <string name="calendar">Calendar</string>

    <!-- ************* Drawer Layout ************* -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- ************* This is Me ************* -->
    <string name="fullName">My Full Name</string>
    <string name="myPreferredName">My Preferred Name</string>
    <string name="knowsMeBest">Who knows me best?</string>
    <string name="myBackground">My Background</string>
    <string name="myRoutine">My routine</string>
    <string name="mayUpsetMe">Things that may upset me</string>
    <string name="makesMeFeelBetter">Things that make me feel better</string>
    <string name="title_activity_medication">MedicationActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- ************* Medication ************* -->
    <string name="morning">Morning</string>
    <string name="lunch">Lunch</string>
    <string name="earlyEvening">Early Evening</string>
    <string name="beforeBed">Before Bed</string>
    <string name="medicationName">Medication Name</string>
    <string name="medicationDosage">Medication Dosage</string>
    <string-array name="dosageType">
        <item name="noOfPills"># of Pills</item>
        <item name="mg">mg</item>
    </string-array>
</resources>
