<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpTitle"
            android:drawableTop="@drawable/heart"
            android:textColor="#673AB7"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="1">
        <EditText
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/person"
            android:drawableStart="@drawable/person"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/signUpConfirmUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/person"
            android:drawableStart="@drawable/person"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/confirmEmail"/>

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/padlock"
            android:drawableStart="@drawable/padlock"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/signUpConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/padlock"
            android:drawableStart="@drawable/padlock"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword"/>

        <Button
            android:id="@+id/confirmLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            android:background="@drawable/roundgreen"
            android:textColor="@color/white"
            android:textSize="30sp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>


</LinearLayout>