<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rgu.honours.dementiacareapp.CareHomeActivity">

    <TextView
        android:id="@+id/careHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carerHomeTitle"
        android:textAlignment="center"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@id/addPatient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/addPatient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/addPatient"
        app:layout_constraintEnd_toStartOf="@+id/signOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/careHomeTitle" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addPatient"
        app:layout_constraintTop_toBottomOf="@+id/careHomeTitle" />


</android.support.constraint.ConstraintLayout>
