<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editThisIsMeDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context="com.rgu.honours.dementiacareapp.ThisIsMe.EditThisIsMeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/save_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/greenButton"
            android:text="Save Content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/save_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/fullName" />

                <EditText
                    android:labelFor="@+id/fullNameText"
                    android:id="@+id/fullNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/myPreferredName" />

                <EditText
                    android:id="@+id/preferredNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/knowsMeBest" />

                <EditText
                    android:id="@+id/knowsMeBestText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/myBackground" />

                <EditText
                    android:id="@+id/myBackGroundText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/myRoutine" />

                <EditText
                    android:id="@+id/myRoutineText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/mayUpsetMe" />

                <EditText
                    android:id="@+id/mayUpsetMeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/makesMeFeelBetter" />

                <EditText
                    android:id="@+id/makesMeFeelBetterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/edit_thisIsMe_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextColor="@color/colorPrimary"
        app:menu="@menu/patient_profile_navigation">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
